<resources>
    <string name="app_name">NabooApp</string>

    //外卖
    <string name="takeout_xiao_fu_reply">你可以说 \"小麦小麦,下一页\"</string>
    <string name="takeout_xiao_fu_reply_first">你可以说 \"小麦小麦,第一个\"</string>
    <string name="takeout_order_address">龙华富士康A区东环二路L7栋 南大门门口\n王小明 13800000000</string>
    <string name="takeout_order_no_address">请新增地址</string>
    <string name="takeout_title">热销外卖</string>
    <string name="takeout_seller_title">商家名称</string>
    <string name="takeout_car_title">购物车</string>
    <string name="takeout_car_empty">购物车是空的...</string>
    <string name="takeout_car_goods">商品</string>
    <string name="takeout_car_quantity">数量</string>
    <string name="takeout_car_price">单价</string>
    <string name="takeout_submit_order_title">提交订单</string>
    <string name="takeout_order_seller_name">商家名称</string>
    <string name="takeout_note_title">添加备注</string>
    <string name="takeout_pay_title">支付</string>

    //打电话
    <string name="takeout_modify_result">好的</string>
    <string name="takeout_modify_goods_count">暂不支持该种问话,请换种方式!</string>
    <string name="call_duration_time">通话时长</string>
    <string name="ok_open_cart">好的,已为您打开购物车</string>
    <string name="back">返回</string>
    <string name="takeout_now_no_free">暂无优惠信息!</string>
    <string name="takeout_add_more">少点点,你点的太多了!</string>
    <string name="takeout_skip_ending">好的,小麦已为您跳转到尾页</string>
    <string name="takeout_skip_starting">好的,小麦已为您跳转到首页</string>
    <string name="takeout_open_send">起送￥</string>
    <string name="takeout_dispatcher">配送￥</string>
    <string name="takeout_dispatcher_time">分钟</string>
    <string name="takeout_month_sale">月销量</string>
    <string name="takeout_sale_free">折优惠</string>
    <string name="takeout_price">￥</string>
    <string name="huan_xin_logout">掉线了,赶快去登录吧!</string>
    <string name="huan_xin_call_net_down">对方网络断开</string>
    <string name="huan_xin_call_video_pause">对方已暂停视频传输</string>
    <string name="huan_xin_call_video_resume">对方已恢复视频传输</string>
    <string name="huan_xin_call_voice_pause">对方已暂停语音传输</string>
    <string name="huan_xin_call_voice_resume">对方已恢复语音传输</string>
    <string name="huan_xin_friend_exist">你们已经是好友了</string>
    <string name="huan_xin_friend_name_and_account_not_empty">联系人与手机号不能为空!</string>
    <string name="huan_xin_friend_name_not_empty">联系人不能为空!</string>
    <string name="huan_xin_friend_account_not_empty">手机号不能为空!</string>
    <string name="huan_xin_friend_apply_send">已发送好友申请!</string>
    <string name="huan_xin_friend_add_fail">添加好友失败!</string>
    <string name="call_book">通讯录</string>
    <string name="call_book_no_friend">你还没有联系人哦,请新增~</string>
    <string name="call_add_friend">新增联系人</string>
    <string name="call_busy">对方正忙</string>
    <string name="call_cancel">已取消</string>
    <string name="call_cancel_is_incoming">对方已取消</string>
    <string name="call_reject_is_incoming">已拒绝</string>
    <string name="call_offline">对方不在线</string>
    <string name="call_no_response">对方可能在忙，建议稍后拨打</string>
    <string name="call_reject">对方已拒绝</string>
    <string name="call_connecting">正在呼叫对方</string>
    <string name="call_connected">正在等待对方接受呼叫申请</string>
    <string name="call_connection_fail">建立连接失败</string>
    <string name="call_connected_is_incoming">对方申请与你进行通话</string>
    <string name="call_accepted">通话已接通</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>

    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="password">密码</string>
    <string name="register">注册</string>
    <string name="confirmpassword">确认密码</string>

    //新闻
    <string name="source">来源：</string>
    <string name="news_next">下一条</string>
    <string name="news_previous">上一条</string>
    <string name="news_pause">好的， 已为您暂停！</string>
    <string name="news_details">内容详情如下： </string>
    <string name="auto_reader_stop">自动阅读功能已停止！</string>
    <string name="no_have_news">暂无相关新闻！</string>
    <string name="no_support_cmd">抱歉！暂不支持此指令！</string>
    <string name="no_previous_news">这是第一条新闻，没有上一条！</string>
    <string name="no_next_news">这是最后一条新闻，没有下一条!</string>
    <string name="broadcast_failure">当前网络不稳定，播报失败！</string>
    <string name="news_broadcast_error">播报出错，请稍后重试！</string>

    //人物
    <string name="figure_name">人名</string>
    <string name="figure_experience">人物简介</string>
    <string name="figure_details">的信息如下：</string>
    <string name="figure_message_loading">加载中......</string>
    <string name="figure_pause">好的， 已为您暂停！</string>
    <string name="figure_who">是谁</string>
    <string name="no_message">抱歉！查询不到相关信息！</string>

    //calendar
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="add_event">添加事件</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="now">现在</string>
    <string name="week">星期</string>
    <string name="sunday">日</string>
    <string name="lunar_calendar">农历</string>
    <string name="yes">是</string>
    <string name="is_the_weekend">是周末</string>
    <string name="is_usual_day">是平常日</string>
    <string name="no_arrangement">没有安排事情</string>
    <string name="please_select_date">请选择日期</string>
    <string name="please_add_event">请添加事件</string>
    <string name="delete">删除</string>
    //drawer
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    //地图
    <string name="map_location">我的位置</string>
    <string name="map_oneview">A级景区</string>
    <string name="map_twoview">AA级景区</string>
    <string name="map_threeview">AAA级景区</string>
    <string name="map_fourview">AAAA级景区</string>
    <string name="map_fiveview">AAAAA级景区</string>
    <string name="map_nophone">暂无相关电话信息</string>
    <string name="map_priceperson">人均25元</string>
    <string name="map_route_walk">已为您规划出步行路径，请查看</string>
    <string name="map_route_bike">已为您规划出骑行路径，请查看</string>
    <string name="map_dialog_noresult">无相关结果</string>
    <string name="map_dialog_message">未查找到相关搜索内容，您可以尝试其他说法。</string>
    <string name="map_navi_nobus">对不起，暂不支持公交的导航模式</string>
    <string name="map_search_faild">路径检索失败</string>
    <string name="map_search_busnoresult">抱歉，暂无公交路线推荐。</string>
    <string name="map_search_allbusno">抱歉，路径检索失败，暂无公交路线推荐。</string>
    <string name="map_location_error">位置信息不能为空</string>
    <string name="map_route_toofar">对不起，路线过于遥远，建议选择驾车模式</string>
    <string name="map_network_error">网络未连接!</string>
    <string name="net_error">网络错误，请检查网络！</string>
    <string name="map_no_result">对不起,没有找到相关地点</string>
    <string name="map_no_net">哎呀，网络不给力，请重试！</string>

    <!--音乐-->
    <string name="music_not_find">找到不到音乐</string>
    <string name="music_query">播放音乐</string>
    <string name="music_not_support">暂不支持此种问话</string>
    <string name="music_random">随机播放</string>
    <string name="music_order">顺序播放</string>
    <string name="music_cycle">单曲循环</string>
    <!--菜谱-->
    <string name="dish_pause">已为您暂停自动播报</string>
    <string name="dish_not_find">查询不到菜谱信息</string>
    <string name="dish_yes">确定</string>
    <!--视频-->
    <string name="video_not_find">找到不到影视资源</string>
    <string name="video_page_last">好的,小麦已为您跳转到尾页</string>
    <string name="video_page_first">好的,小麦已为您跳转到首页</string>
    <string name="video_play_start">好的,为您播放</string>
    <string name="video_play_error">播放失败，请检查是否有网络权限</string>
    <!--天气-->
    <string name="weather_not_find1">查询不到</string>
    <string name="weather_not_find2">的天气信息</string>
    <string name="weather_today">今天</string>
    <string name="weather_aqi">空气质量</string>
    <string name="weather_rays">紫外线指数</string>
</resources>
