<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:textSize="@dimen/calendar_dialog_title_textsize"
        android:textColor="#0E73BA"
        android:gravity="center"
        android:background="@drawable/add_title_background"/>
    <TimePicker
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        android:layout_gravity="center"></TimePicker>
    <EditText
        android:id="@+id/editevent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/MyEditText"
        android:lines="1"
        android:maxLength="20"
        android:textColor="#000000"
        android:textSize="@dimen/calendar_dialog_edit_textsize"/>
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">
       <Button
           android:id="@+id/cancel"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:layout_margin="@dimen/calendar_dialog_margin"
           android:text="@string/cancel"
           android:textAllCaps="false"
           android:textColor="#FFFFFF"
           android:textSize="@dimen/calendar_dialog_button_textsize"
           android:background="#0E73BA"/>
       <Button
           android:id="@+id/yes"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_margin="@dimen/calendar_dialog_margin"
           android:layout_weight="1"
           android:text="@string/sure"
           android:textAllCaps="false"
           android:textColor="#FFFFFF"
           android:textSize="@dimen/calendar_dialog_button_textsize"
           android:background="#0E73BA"/>
   </LinearLayout>
</LinearLayout>
