<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eff2f6"
    android:id="@+id/login_linear"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:src="@drawable/em_welcom_logo" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1" >

        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="@drawable/shape_edit_text">

            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/em_icon_account" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/user_name"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:maxLength="11"
                android:digits="1234567890"
                android:inputType="phone"
                android:textColor="#000"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout

            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_below="@id/rl_username"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="@drawable/shape_edit_text">


            <CheckBox
                android:id="@+id/iv_password_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:background="@drawable/em_icon_pwd"
                android:button="@null" />
            <EditText
                android:id="@+id/password_es"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/password"
                android:layout_toLeftOf="@id/iv_password_login"
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textSize="18sp"
                android:imeOptions="actionDone"/>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_password"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ease_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/em_button_login_bg"
                android:gravity="center"
                android:onClick="login"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/ease_register_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/em_button_register_bg"
                android:gravity="center"
                android:onClick="register"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/register"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


        </LinearLayout>

        <!-- Add the RelativeLayout to avoid service-check text be pushed upon the keyboard -->
        <!--<RelativeLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_below="@+id/ll_btn">-->

        <!--<TextView-->
        <!--android:id="@+id/txt_service_ckeck"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_alignParentRight="true"-->
        <!--android:layout_marginBottom="20dip"-->
        <!--android:layout_marginRight="28dip"-->
        <!--android:onClick="serviceCheck"-->
        <!--android:padding="2dip"-->
        <!--android:text="@string/sdk_service_check"-->
        <!--android:textSize="16sp" />-->
        <!--</RelativeLayout>-->

    </RelativeLayout>

</LinearLayout>